Adding Challenge code

--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,20 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Visit the mars nasa news site\n",
     "url = 'https://mars.nasa.gov/news/'\n",
@@ -67,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,40 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<div class=\"content_title\"><a href=\"/news/8622/virginia-middle-school-student-earns-honor-of-naming-nasas-next-mars-rover/\" target=\"_self\">Virginia Middle School Student Earns Honor of Naming NASA's Next Mars Rover</a></div>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "slide_elem.find(\"div\", class_='content_title')"
+    "#slide_elem.find(\"div\", class_ ='content_title')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Virginia Middle School Student Earns Honor of Naming NASA's Next Mars Rover\""
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the parent element to find the first `a` tag and save it as `news_title`\n",
     "news_title = slide_elem.find(\"div\", class_='content_title').get_text()\n",
@@ -120,20 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'NASA chose a seventh-grader from Virginia as winner of the agency\\'s \"Name the Rover\" essay contest. Alexander Mather\\'s entry for \"Perseverance\" was voted tops among 28,000 entries. '"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the parent element to find the paragraph text\n",
     "news_p = slide_elem.find('div', class_=\"article_teaser_body\").get_text()\n",
@@ -149,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,19 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Find the more info button and click that\n",
     "browser.is_element_present_by_text('more info', wait_time=1)\n",
     "more_info_elem = browser.find_link_by_partial_text('more info')\n",
+    "#more_info_elem = browser.link.find_by_partial_text('more info')\n",
     "more_info_elem.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,20 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/spaceimages/images/largesize/PIA23446_hires.jpg'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find the relative image url\n",
     "img_url_rel = img_soup.select_one('figure.lede a img').get(\"src\")\n",
@@ -216,20 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA23446_hires.jpg'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the base URL to create an absolute URL\n",
     "img_url = f'https://www.jpl.nasa.gov{img_url_rel}'\n",
@@ -238,131 +173,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>description</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Equatorial Diameter:</th>\n",
-       "      <td>6,792 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Polar Diameter:</th>\n",
-       "      <td>6,752 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mass:</th>\n",
-       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Moons:</th>\n",
-       "      <td>2 (Phobos &amp; Deimos)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Orbit Distance:</th>\n",
-       "      <td>227,943,824 km (1.38 AU)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Orbit Period:</th>\n",
-       "      <td>687 days (1.9 years)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Surface Temperature:</th>\n",
-       "      <td>-87 to -5 °C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>First Record:</th>\n",
-       "      <td>2nd millennium BC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Recorded By:</th>\n",
-       "      <td>Egyptian astronomers</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              value\n",
-       "description                                        \n",
-       "Equatorial Diameter:                       6,792 km\n",
-       "Polar Diameter:                            6,752 km\n",
-       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
-       "Moons:                          2 (Phobos & Deimos)\n",
-       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
-       "Orbit Period:                  687 days (1.9 years)\n",
-       "Surface Temperature:                   -87 to -5 °C\n",
-       "First Record:                     2nd millennium BC\n",
-       "Recorded By:                   Egyptian astronomers"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_html('http://space-facts.com/mars/')[1]\n",
+    "df = pd.read_html('http://space-facts.com/mars/')[0]\n",
     "df.columns=['description', 'value']\n",
     "df.set_index('description', inplace=True)\n",
-    "df.head(10)"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>value</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.to_html()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser.quit()"
+    "#browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"### Mars Hemisphere\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# USGS Astrogeology site to obtain high resolution images for each of Mar's hemispheres\n",
+    "# Visit URL\n",
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse the resulting html with soup\n",
+    "html = browser.html\n",
+    "hemisphere_soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list to store:\n",
+    "hemisphere_image_urls = []\n",
+    "# create empty dict\n",
+    "hemisphere_dict = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<h3>Cerberus Hemisphere Enhanced</h3>, <h3>Schiaparelli Hemisphere Enhanced</h3>, <h3>Syrtis Major Hemisphere Enhanced</h3>, <h3>Valles Marineris Hemisphere Enhanced</h3>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get all the title\n",
+    "results = hemisphere_soup.find_all('h3')\n",
+    "#results = hemisphere_soup.find_all('div', class_ = 'description' )[3].find('a').get(\"href\")\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in range(0, 1):\n",
+    "        # Get text info from result\n",
+    "        #itema = result.text\n",
+    "        hemi_url_rel =hemisphere_soup.find_all('div', class_ = 'description' )[0].find('a').get(\"href\")\n",
+    "        hemi_url = f'https://astrogeology.usgs.gov/{hemi_url_rel}'\n",
+    "        hemi_url_elem=browser.links.find_by_href(hemi_url)\n",
+    "        hemi_url_elem.click()\n",
+    "        print(hemi_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vijay\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:528: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg\n",
+      "{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}\n",
+      "http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg\n",
+      "{'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}\n",
+      "http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg\n",
+      "{'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}\n",
+      "http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg\n",
+      "{'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for result in results:\n",
+    "#for x in range(0, 3):\n",
+    "        # Get text info from result\n",
+    "        itema = result.text\n",
+    "        #hemi_url_rel =hemisphere_soup.find_all('div', class_ = 'description' )[0].find('a').get(\"href\")\n",
+    "        #hemi_url = f'https://astrogeology.usgs.gov/{hemi_url_rel}'\n",
+    "        #time.sleep(1) \n",
+    "        #browser.is_element_present_by_text(itema, wait_time=1)\n",
+    "        browser.click_link_by_partial_text(itema)\n",
+    "        #links_found = browser.links.find_by_partial_href(itema)\n",
+    "        #links_found.click()\n",
+    "        open_elem = browser.find_link_by_partial_text('Open')\n",
+    "        #open_elem = browser.links.find_by_partial_text('Open')\n",
+    "        open_elem.click()\n",
+    "        #time.sleep(1)\n",
+    "        # assign html content\n",
+    "        htmla = browser.html\n",
+    "        # Create a Beautiful Soup object\n",
+    "        hemi_img_soup = BeautifulSoup(htmla,'html.parser')\n",
+    "        #time.sleep(1)\n",
+    "        # Grab the image link\n",
+    "        linka = hemi_img_soup.find_all('div', class_=\"downloads\")[0].find_all('a')[0].get(\"href\")\n",
+    "        print(linka)\n",
+    "            # Pass title to Dict\n",
+    "        #time.sleep(1)\n",
+    "        hemisphere_dict[\"title\"]=itema\n",
+    "        # Pass url to Dict\n",
+    "        hemisphere_dict[\"img_url\"]=linka\n",
+    "        print(hemisphere_dict)\n",
+    "        # Append Dict to the list \n",
+    "        hemisphere_image_urls.append(hemisphere_dict)\n",
+    "        # Clean Up Dict\n",
+    "        hemisphere_dict = {}\n",
+    "        browser.click_link_by_partial_text('Close')\n",
+    "        browser.back()\n",
+    "        #time.sleep(1)\n",
+    "    # Put infos into Library\n",
+    "    #mars_library['hemisphere_image_urls']=hemisphere_image_urls\n",
+    "    \n",
+    "    # Return Library\n",
+    "    #return mars_library\n",
+    "hemisphere_image_urls"
    ]
   }
  ],
